--- a/index.html
+++ b/index.html
@@ -27,111 +27,22 @@ Forets&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&n
 
 <hr>
 
-<p>Nac&iacute; en Montevideo, Uruguay (1988). Me form&eacute; como Licenciado en
-F&iacute;sica (Facultad de Ciencias, UdelaR, 2006-2010) y como Ingeniero
-Electricista (Facultad de Ingenier&iacute;a, Udelar, 2006-2013). Actualmente
-estoy haciendo un Doctorado en Matem&aacute;tica Aplicada en la Universidad
-Joseph
-Fourier (Grenoble, Francia, 2013-presente) bajo la supervisi&oacute;n de <a href="http://membres-lig.imag.fr/arrighi/">Pablo Arrighi</a> y <a href="http://www-fourier.ujf-grenoble.fr/%7Ejoye/"> Alain Joye</a>.
+<p> Post-doc Researcher at VERIMAG, Universite Grenoble Alpes, France
+Phone: +33 (0) 6 47 91 43 65, Web: http://marcelo-forets.fr
 </p>
 
-<p> Sobre la tesis de doctorado: <i>Quantum Cellular Automata and
-toy models for theoretical physics</i>. Ver un resumen (en ingl&eacute;s) <a href="thesis.html">aqu&iacute;</a>.<br>
-</p>
 
 <hr>
 
-<h3>
-<a href="#contacto">Contacto </a> <br>
+
+
+<h3><a id="contacto">Contact </a><br>
 </h3>
 
-<h3>
-<a href="#produccioncientifica">Producci&oacute;n cient&iacute;fica </a> <br>
-</h3>
-
-<h3>
-<a href="#eventos">Eventos </a> <br>
-</h3>
-
-<hr>
-
-<h3><a id="contacto">Contacto </a><br>
-</h3>
-
-<img src="files/email3.gif" alt="e-mail:" x-sas-useimagewidth="" x-sas-useimageheight="" align="middle"><a href="mailto:mforets@fing.edu.uy">mforets [AT] fing.edu.uy</a>&nbsp;
-o&nbsp; <a href="mailto:marcelo.forets@imag.fr">marcelo.forets [AT] imag.fr</a> &nbsp; o &nbsp; <a href="mailto:mforets@gmailcom">mforets [AT]
+<img src="files/email3.gif" alt="e-mail:" x-sas-useimagewidth="" x-sas-useimageheight="" align="middle"><a href="mailto:marcelo.forets@imag.fr">marcelo.forets [AT] imag.fr</a> &nbsp; or &nbsp; <a href="mailto:mforets@gmailcom">mforets [AT]
 gmail.com</a>
 <br>
 
-<p><img src="files/tel.gif" alt="Tel:" x-sas-useimagewidth="" x-sas-useimageheight="" align="middle">(+33) 06.47.91.43.65 (celular),
-(+33) 04.76.51.49.55 (oficina)<a href="http://capp.imag.fr/"><span style="font-style: italic;"><br>
-</span></a></p>
-
-<p><a href="http://capp.imag.fr/"><span style="font-style: italic;"></span>CAPP
-Group </a> - Laboratoire d'Informatique de Grenoble <a href="http://www.liglab.fr/"> (LIG) </a>. Click para ver posici&oacute;n en <a href= "https://www.google.fr/maps/place/45%C2%B011%2738.0%22N+5%C2%B046%2715.2%22E/@45.1925713,5.7710252,570m/data=!3m1!1e3!4m2!3m1!1s0x0:0x0?hl=es-419" > Google maps. </a>
-<br> 
-</p> Bureau C104<br>
-B&acirc;timent IMAG C - 220, rue de la Chimie. 38400 FRANCE <br> 
-
-
-<hr><!-- Decommenter la ligne suivante et adapter pour inserer une photo --><!-- IMG SRC="http://www-clips.imag.fr/" ALT="Photo" -->
-<h3><a id="produccioncientifica">Producci&oacute;n cient&iacute;fica </a><br>
-</h3>
-
-<h4>&nbsp;&nbsp;&nbsp; 1. Publicaciones y pre-publicaciones</h4>
-
-<ul>
-<hr>
-  <li>3. <IMG  SRC="files/njpf.gif"  WIDTH=87.5 HEIGHT=126.7 ALIGN=middle> (con Pablo Arrighi, Stefano Facchini) : 
-  &nbsp;<i> Discrete
-Lorentz covariance for Quantum Walks and Quantum Cellular Automata,</i><i>
-    </i>New Journal of Physics  <a href="http://iopscience.iop.org/1367-2630/16/9/093007/">16 (2014) 093007</a> . Pre-print: <a href="http://arxiv.org/abs/1404.4499">arXiv:1404.4499
-[quant-ph]</a>   <br>  
-<hr>
-</li>
-</ul>
-
-<ul>
-
-  <li>2. <IMG  SRC="files/jphysa.gif"  WIDTH=87.5 HEIGHT=126.7 ALIGN=middle>
-  (con Pablo Arrighi, Vincent Nesme) :&nbsp;<i> The
-Dirac equation as a quantum walk: higher dimensions, observational
-convergence,&nbsp;</i> J. Phys. A: Math. Theor. 47 <a href="http://iopscience.iop.org/1751-8121/47/46/465302/"> (2014) 465302</a>. Pre-print: <a href="http://arxiv.org/abs/1307.3524">arXiv:1307.3524 [quant-ph]</a></li>
-<hr>
-</ul>
-
-<ul>
-
-  <li>1. <IMG  SRC="files/msc.jpg"  WIDTH=87.5 HEIGHT=126.7 ALIGN=middle> (con G. Abal, R. Donangelo, R. Portugal) : <i>
-Spatial quantum search in a triangular network, </i> Mathematical
-Structures in Computer Science,  <a href="http://journals.cambridge.org/action/displayAbstract?fromPage=online&aid=8544748&fileId=S0960129511000600">
-<b> 22 </b>, pp 521-531, Cambridge
-University Press </a>. Pre-print: <a href="http://arxiv.org/abs/1009.1422">arXiv:1009.1422 [quant-ph]  </a> <br> 
- <hr>
-  </li>
-</ul>
-
-<h4>&nbsp;&nbsp;&nbsp; 2. En preparaci&oacute;n</h4>
-
-<ul>
-  <li>2014. (con Pablo Arrighi, Stefano Facchini) :&nbsp;<i> Quantum Walks and the curved spacetime Dirac equation.</i>
-    </li>
-</ul>
-
-
-
-<hr>
-<h3><a id="eventos">Eventos </a><br>
-</h3>
-
-<ul>
-
-  
-  <li> <a href="pastEvents.html">Eventos anteriores</a> </li>
-</ul>
-
-<p>
-</p>
 
 <hr><!-- Decommenter la ligne suivante et adapter pour inserer une photo --><!-- IMG SRC="http://www-clips.imag.fr/" ALT="Photo" -->
 </body></html>
