--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@ Forets&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&n
 Phone: +33 (0) 6 47 91 43 65, Web: http://marcelo-forets.fr
 </p>
 
+    <hr />
+<p>Topics of current recent activity include:</p>
+
+<ul>
+	<li>Nonlinear dynamical systems, control and modeling of hybrid systems.</li>
+	<li>Algorithmic verification and safety properties of cyber-physical systems. Reachability analysis under uncertainty.</li>
+	<li>Quantum simulation of physical systems. Quantum walks and quantum cellular automata.</li>
+    <li> Spectral analysis of linear operators. Pseudospectrum. </li>
+	<li> Polynomial optimization and the generalized moments problem. </li>
+</ul>
+
+
 
 <hr>
 
