--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ Phone: +33 (0) 6 47 91 43 65, Web: http://marcelo-forets.fr
 <p>Topics of current recent activity include:</p>
 
 <ul>
-	<li>Nonlinear dynamical systems, control and modeling of hybrid systems.</li>
-	<li>Algorithmic verification and safety properties of cyber-physical systems. Reachability analysis under uncertainty.</li>
+	<li>Nonlinear dynamical systems, control and modeling.</li>
+	<li>Algorithmic verification and safety properties of cyber-physical systems. Hybrid systems. Reachability analysis under uncertainty.</li>
 	<li>Quantum simulation of physical systems. Quantum walks and quantum cellular automata.</li>
     <li> Spectral analysis of linear operators. Pseudospectrum. </li>
 	<li> Polynomial optimization and the generalized moments problem. </li>
