--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ alt="St John's College"></a>
 
     <hr>
     
-<p> The scientific topics of my PhD thesis include: </p>    
+<p> The topics of <a href="http://theses.fr/2015GREAM028"> my PhD thesis include </a> : </p>    
    <ul>
     <li>Quantum simulation of physical systems. The Dirac equation.</li>
     <li> Quantum walks and quantum cellular automata. </li>
