--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
 <td valign=top>
 <FONT SIZE="+2"><b>
 Marcelo Forets</b></FONT><br>
-Post-doc researcher at TEMPO team led by <a href="http://www-verimag.imag.fr/~maler/">Oded Maler</a>.<br>
+(2016-) Post-doc researcher at TEMPO team led by <a href="http://www-verimag.imag.fr/~maler/">Oded Maler</a>. <br>    
+
 <a href="http://www-verimag.imag.fr/">VERIMAG</a>,
 <a href="http://www.univ-grenoble-alpes.fr/">Universite Grenoble Alpes</a><br>
-
+<br>
+My Post-doc mentor is <a href="https://sites.google.com/site/frehseg/" > Goran Frehse. </a><br>    
+    
 </td>
 
 <td rowspan=2 width=40>
@@ -83,11 +86,12 @@ alt="St John's College"></a>
 
     <hr>
 
+    I hold a PhD in Mathematics and Informatics from UGA (Dec' 2015). My PhD advisors were <a href="http://pageperso.lif.univ-mrs.fr/~pablo.arrighi/"> Pablo Arrighi </a> and <a href="https://www-fourier.ujf-grenoble.fr/~joye/"> Alain Joye. </a>
 <p> The topics of <a href="http://theses.fr/2015GREAM028"> my PhD thesis include </a> : </p>
    <ul>
-    <li>Quantum simulation of physical systems. The Dirac equation.</li>
     <li> Quantum walks and quantum cellular automata. </li>
-       <li>  Spectral analysis of unitary operators. </li>
+    <li>Quantum simulation of physical systems. The Dirac equation.</li>
+    <li>  Spectral analysis of unitary operators. </li>
 </ul>
 
 <hr>
