--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 <td valign=top>
 <FONT SIZE="+2"><b>
 Marcelo Forets</b></FONT><br>
-(2016-) Post-doc researcher at TEMPO team led by <a href="http://www-verimag.imag.fr/~maler/">Oded Maler</a>. <br>    
+(2016-) Post-doc researcher at TEMPO team led by <a href="http://www-verimag.imag.fr/~maler/" target="_blank">Oded Maler</a>. <br>    
 
 <a href="http://www-verimag.imag.fr/">VERIMAG</a>,
 <a href="http://www.univ-grenoble-alpes.fr/">Universite Grenoble Alpes</a><br>
 <br>
-My Post-doc mentor is <a href="https://sites.google.com/site/frehseg/" > Goran Frehse. </a><br>    
+My Post-doc mentor is <a href="http://sites.google.com/site/frehseg/" target="_blank"> Goran Frehse. </a><br>    
     
 </td>
 
@@ -43,11 +43,11 @@ My Post-doc mentor is <a href="https://sites.google.com/site/frehseg/" > Goran F
 </td>
 
 <td valign=top>
-<a href="http://www-verimag.imag.fr/"><img border="0" src="files/VERIMAG.png"  height="60"
+<a href="http://www-verimag.imag.fr/" target="_blank"><img border="0" src="files/VERIMAG.png"  height="60"
 alt="VERIMAG"></a>
 </td>
     <td valign=top>
-<a href="http://www.univ-grenoble-alpes.fr/"><img border="0" src="files/UGA.png"  height="60"
+<a href="http://www.univ-grenoble-alpes.fr/" target="_blank"><img border="0" src="files/UGA.png"  height="60"
 alt="VERIMAG"></a>
 </td>
 </tr>
@@ -86,7 +86,7 @@ alt="St John's College"></a>
 
     <hr>
 
-    I hold a PhD in Mathematics and Informatics from UGA (Dec' 2015). My PhD advisors were <a href="http://pageperso.lif.univ-mrs.fr/~pablo.arrighi/"> Pablo Arrighi </a> and <a href="https://www-fourier.ujf-grenoble.fr/~joye/"> Alain Joye. </a>
+    I hold a PhD in Mathematics and Informatics from UGA (Dec' 2015). My PhD advisors were <a href="http://pageperso.lif.univ-mrs.fr/~pablo.arrighi/" target="_blank"> Pablo Arrighi </a> and <a href="http://www-fourier.ujf-grenoble.fr/~joye/" target="_blank"> Alain Joye. </a>
 <p> The topics of <a href="http://theses.fr/2015GREAM028"> my PhD thesis include </a> : </p>
    <ul>
     <li> Quantum walks and quantum cellular automata. </li>
