--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 Marcelo Forets</b></FONT><br>
 (2016-) Post-doc researcher at TEMPO team led by <a href="http://www-verimag.imag.fr/~maler/" target="_blank">Oded Maler</a>. <br>    
 
-<a href="http://www-verimag.imag.fr/">VERIMAG</a>,
-<a href="http://www.univ-grenoble-alpes.fr/">Universite Grenoble Alpes</a><br>
+<a href="http://www-verimag.imag.fr/" target="_blank">VERIMAG</a>,
+<a href="http://www.univ-grenoble-alpes.fr/" target="_blank">Universite Grenoble Alpes</a><br>
 <br>
 My Post-doc mentor is <a href="http://sites.google.com/site/frehseg/" target="_blank"> Goran Frehse. </a><br>    
     
@@ -61,13 +61,6 @@ alt="VERIMAG"></a>
 <b>Email:</b> marcelo dot forets at imag dot fr
 </td>
 
-<!--
-<td>
-<a href="http://www.sjc.ox.ac.uk/"><img border="0" src="sjc.gif"
-alt="St John's College"></a>
-</td>
--->
-
 </tr>
 
 </TBODY>
@@ -87,7 +80,7 @@ alt="St John's College"></a>
     <hr>
 
     I hold a PhD in Mathematics and Informatics from UGA (Dec' 2015). My PhD advisors were <a href="http://pageperso.lif.univ-mrs.fr/~pablo.arrighi/" target="_blank"> Pablo Arrighi </a> and <a href="http://www-fourier.ujf-grenoble.fr/~joye/" target="_blank"> Alain Joye. </a>
-<p> The topics of <a href="http://theses.fr/2015GREAM028"> my PhD thesis include </a> : </p>
+<p> The topics of <a href="http://theses.fr/2015GREAM028" target="_blank"> my PhD thesis include </a> : </p>
    <ul>
     <li> Quantum walks and quantum cellular automata. </li>
     <li>Quantum simulation of physical systems. The Dirac equation.</li>
