--- a/exercises-boyd/table.html
+++ b/exercises-boyd/table.html
@@ -4,7 +4,7 @@
 <head>
 
 <meta charset="utf-8">
-<title>exercises-BV</title>
+<title>table</title>
 
 
 <style type="text/css">
@@ -510,11 +510,13 @@ pre.line-numbers > code {
 
 <body>
 
+<h2 id="toc_0">Solution of selected exercises</h2>
+
 <table>
 <thead>
 <tr>
 <th style="text-align: center">Exercise #</th>
-<th style="text-align: center">Topics</th>
+<th style="text-align: center">Main topics</th>
 <th style="text-align: center">Source</th>
 </tr>
 </thead>
@@ -532,6 +534,45 @@ pre.line-numbers > code {
 </tr>
 </tbody>
 </table>
+
+<h2 id="toc_1">Chapter résumé</h2>
+
+<table>
+<thead>
+<tr>
+<th style="text-align: center">Chapter</th>
+<th style="text-align: center">Main topics</th>
+<th style="text-align: center">Source</th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+<td style="text-align: center"><a href="convex-sets.html">Convex sets</a></td>
+<td style="text-align: center">definition of convex set</td>
+<td style="text-align: center">[1]</td>
+</tr>
+<tr>
+<td style="text-align: center"><a href="convex-functions.html">Convex functions</a></td>
+<td style="text-align: center">definition of convex set</td>
+<td style="text-align: center">[1]</td>
+</tr>
+</tbody>
+</table>
+
+<h2 id="toc_2">Commonly used notation</h2>
+
+<p><em>Polynomials</em>. The standard notation for polynomials with coefficients on a field \(\mathbb{K}\), on a scalar (real) variable \(t\), is \(p(t) \in \mathbb{K}[t]\). Moreover, for polynomials with domain in \(\mathbb{R}^n\), we denote \(p(x) \in \mathbb{K}^n[x]\).</p>
+
+<h2 id="toc_3">How to contribute</h2>
+
+<p>If you would like to contribute with an exercise please <a href="marcelo-forets.fr">send me an email</a> and I will upload it here. Otherwise you can directly do it yourself, you just need a <a href="https://github.com/">github</a> account (it is free). </p>
+
+<h2 id="toc_4">References:</h2>
+
+<p>[1] Convex optimization. Boyd and Vandenberghe. </p>
+
+<p>[2] Additional exercies for Convex Optimization. Boyd and Vandenberghe. Aug&#39; 2016.</p>
 
 
 
