--- a/exercises-boyd/main.html
+++ b/exercises-boyd/main.html
@@ -4,7 +4,7 @@
 <head>
 
 <meta charset="utf-8">
-<title>table</title>
+<title>main</title>
 
 
 <style type="text/css">
@@ -523,7 +523,7 @@ pre.line-numbers > code {
 
 <tbody>
 <tr>
-<td style="text-align: center"><a href="exercise-2-7.html">2.1</a></td>
+<td style="text-align: center"><a href="exercise-2-7.html">2.7</a></td>
 <td style="text-align: center">definition of convex set</td>
 <td style="text-align: center">[1]</td>
 </tr>
@@ -568,11 +568,15 @@ pre.line-numbers > code {
 
 <p>If you would like to contribute with an exercise please <a href="marcelo-forets.fr">send me an email</a> and I will upload it here. Otherwise you can directly do it yourself, you just need a <a href="https://github.com/">github</a> account (it is free). </p>
 
+<p>To actually create new content, you can do it in any text editor and save the file in .md (<a href="https://en.wikipedia.org/wiki/Markdown">Markdown</a>) format. There exist as well several programs specially conceived to formatting in Markdown. On a personal note, my favorite (for MacOS) is the open-source project <a href="macdown.uranusjr.com/">MacDown</a>. </p>
+
+<p>If you prefer to work online, check <a href="https://stackedit.io">stack edit</a>.</p>
+
 <h2 id="toc_4">References:</h2>
 
 <p>[1] Convex optimization. Boyd and Vandenberghe. </p>
 
-<p>[2] Additional exercies for Convex Optimization. Boyd and Vandenberghe. Aug&#39; 2016.</p>
+<p>[2] <a href="https://web.stanford.edu/%7Eboyd/cvxbook/bv_cvxbook_extra_exercises.pdf">Additional exercies for Convex Optimization.</a> Boyd and Vandenberghe. Aug&#39; 2016.</p>
 
 
 
