updated some links

--- a/index.html
+++ b/index.html
@@ -88,4 +88,17 @@ alt="VERIMAG"></a>
 </ul>
 
 <hr>
+    
+
+<p>Elsewhere:</p>
+
+<ul>
+	<li><a href="https://github.com/mforets" target="_blank"><img border="0" src="files/github_logo.png"  height="40"
+alt="Github">Github</a></li>
+	<li><a href="https://ask.sagemath.org/users/8657/mforets/" target="_blank"><img border="0" src="files/sagemath_logo.jpeg"  height="40"
+alt="SageMath">SageMath</a></li>
+</ul>
+
+    <hr>
+    
 </body></html>
